--- a/.github/workflows/main_workflow.yaml
+++ b/.github/workflows/main_workflow.yaml
@@ -12,7 +12,7 @@ jobs:
       - name: LInter execution
       - uses: github/super-linter@v3
         env:
-          DEFAULT_BRANCH: nodejs_example
+          DEFAULT_BRANCH: nodejs_linter_job
           GITHUB_TOKEN: ${{ secrets.TOKEN_GITHUB }}
           LINTER_RULES_PATH: /
           JAVASCRIPT_ES_CONFIG_FILE: .eslintrc.json
