--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "eslint-config-standard": "^17.0.0",
     "express": "^4.18.2"
   }
 }
