--- a/package.json
+++ b/package.json
@@ -11,5 +11,8 @@
   "dependencies": {
     "eslint-config-standard": "^17.0.0",
     "express": "^4.18.2"
+  },
+  "devDependencies": {
+    "eslint": "^8.29.0"
   }
 }
