--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "eslint-config-standard": "^17.0.0",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "jest": "^29.3.1"
   },
   "devDependencies": {
     "eslint": "^8.29.0"
