--- a/.github/workflows/main_workflow.yaml
+++ b/.github/workflows/main_workflow.yaml
@@ -18,6 +18,7 @@ jobs:
           JAVASCRIPT_ES_CONFIG_FILE: .eslintrc.js
           VALIDATE_JAVASCRIPT_ES: true
   test-execution:
+    needs: linter-execution
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Code
