--- a/.github/workflows/main_workflow.yaml
+++ b/.github/workflows/main_workflow.yaml
@@ -6,9 +6,17 @@ on:
 jobs:
   linter-execution:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        node: [ 10, 12 ]
+    name: Node ${{ matrix.node }} sample
     steps:
       - name: Checkout Code
         uses: actions/checkout@v2
+      - name: Setting node version
+        uses: actions/setup-node@v2
+        with:
+          node-version: ${{ matrix.name}}
       - name: Linter execution
         uses: github/super-linter@v4
         env:
