--- a/.github/workflows/main_workflow.yaml
+++ b/.github/workflows/main_workflow.yaml
@@ -44,4 +44,4 @@ jobs:
         id: hello
         uses: adeloyedeji/github-actions-hello@v1.0
         with:
-          who-to-greet: '${env.DESTINATION_PERSON} JoaquimRS'
+          who-to-greet: '$DESTINATION_PERSON JoaquimRS'
