--- a/.github/workflows/main_workflow.yaml
+++ b/.github/workflows/main_workflow.yaml
@@ -36,6 +36,7 @@ jobs:
       - run: npm install jest
       - run: npm test
   environment_test_execution:
+    needs: test-execution
     runs-on: ubuntu-latest
     name: environment
     steps:
