--- a/.github/workflows/main_workflow.yaml
+++ b/.github/workflows/main_workflow.yaml
@@ -2,7 +2,7 @@ name: main_workflow
 on:
   push:
     branches:
-      - nodejs_environment_job
+      - nodejs_test_failure
 env:
   DESTINATION_PERSON: 2DAW
 jobs:
@@ -22,7 +22,7 @@ jobs:
       - name: Linter execution
         uses: github/super-linter@v4
         env:
-          DEFAULT_BRANCH: nodejs_environment_job
+          DEFAULT_BRANCH: nodejs_test_failure
           GITHUB_TOKEN: ${{ secrets.TOKEN_GITHUB }}
           LINTER_RULES_PATH: /
           JAVASCRIPT_ES_CONFIG_FILE: .eslintrc.js
@@ -35,6 +35,11 @@ jobs:
         uses: actions/checkout@v2
       - run: npm install jest
       - run: npm test
+        id: test
+        continue-on-error: true
+      - name: Failure
+        if: steps.test.outcome != 'success'
+        run: echo Error && exit 1
   environment_test_execution:
     needs: test-execution
     runs-on: ubuntu-latest
