--- a/.github/workflows/send_telegram_workflow.yml
+++ b/.github/workflows/send_telegram_workflow.yml
@@ -11,4 +11,4 @@ jobs:
       - uses: ./.github/actions
         with:
           telegram_token: ${{ secrets.TELEGRAM_TOKEN }}
-          telegram_id_user: ${{ secrets.TELEGRAM_USER_ID }}
+          telegram_id_user: ${{ secrets.TELEGRAM_ID_USER }}
