--- a/.github/workflows/send_telegram_workflow.yaml
+++ b/.github/workflows/send_telegram_workflow.yaml
@@ -8,7 +8,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: .github/actions
+      - uses: ./.github/actions
         with:
           telegram_token: ${{ secrets.TELEGRAM_TOKEN }}
           telegram_id_user: ${{ secrets.TELEGRAM_ID_USER }}
