--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "node-telegram-bot-api": "^0.61.0"
   },
   "devDependencies": {
-    "@vercel/ncc": "latest",
-    "@zeit/ncc": "^0.22.3"
+    "@vercel/ncc": "latest"
   },
   "scripts": {
     "build": "ncc build index.js"
