--- a/.github/workflows/main_workflow.yaml
+++ b/.github/workflows/main_workflow.yaml
@@ -2,33 +2,11 @@ name: main_workflow
 on:
   push:
     branches:
-      - nodejs_test_failure
+      - github_action_readme
 env:
   DESTINATION_PERSON: 2DAW
 jobs:
-  linter-execution:
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        node: [ 10, 12 ]
-    name: Node ${{ matrix.node }} sample
-    steps:
-      - name: Checkout Code
-        uses: actions/checkout@v2
-      - name: Setting node version
-        uses: actions/setup-node@v2
-        with:
-          node-version: ${{ matrix.node }}
-      - name: Linter execution
-        uses: github/super-linter@v4
-        env:
-          DEFAULT_BRANCH: nodejs_test_failure
-          GITHUB_TOKEN: ${{ secrets.TOKEN_GITHUB }}
-          LINTER_RULES_PATH: /
-          JAVASCRIPT_ES_CONFIG_FILE: .eslintrc.js
-          VALIDATE_JAVASCRIPT_ES: true
   test-execution:
-    needs: linter-execution
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Code
@@ -40,13 +18,3 @@ jobs:
       - name: Failure
         if: steps.test.outcome != 'success'
         run: echo Error && exit 1
-  environment_test_execution:
-    needs: test-execution
-    runs-on: ubuntu-latest
-    name: environment
-    steps:
-      - name: environment
-        id: hello
-        uses: adeloyedeji/github-actions-hello@v1.0
-        with:
-          who-to-greet: '${{env.DESTINATION_PERSON}} JoaquimRS'
