--- a/.github/workflows/modify_readme.yaml
+++ b/.github/workflows/modify_readme.yaml
@@ -13,6 +13,7 @@ jobs:
         uses: actions/checkout@v2
       - run: npm install jest
       - run: npm test
+        continue-on-error: true
         id: test        
   mod-readme:
     needs: test-execution
